Import of KUNIYOSHI/WebService-EastCoJp-Dictionary-0.02 from CPAN.
gitpan-cpan-distribution: WebService-EastCoJp-Dictionary
gitpan-cpan-version:      0.02
gitpan-cpan-path:         KUNIYOSHI/WebService-EastCoJp-Dictionary-0.02.tar.gz
gitpan-cpan-author:       KUNIYOSHI
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for Perl extension WebService::EastCoJp::Dictionary.
 
+0.02  Sun Aug 29 19:31:13 2010
+    - Moose needs default.  Remove specification of default = undef.
 0.01  Mon Nov  2 21:51:52 2009
     - original version; created by h2xs 1.23 with options
         -Xan WebService::EastCoJp::Dictionary
